--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@ long D(long n){
 
      return result;
 } 
-  </textarea>
-  <input type="submit" value="Submit">
+  </textarea><br>
+  <input type="submit" style="font-size:140%;" value="Submit">
 </form>
 <br />
 <br />
@@ -330,8 +330,8 @@ long D(long n){
 
      return result;
 } 
-    </textarea>
-    <input type="submit" value="Submit">
+    </textarea><br>
+    <input type="submit" style="font-size:140%;" value="Submit">
   </form>
  
       <br />
@@ -411,8 +411,8 @@ except:
     print("undefined")
 
       
-              </textarea>
-              <input type="submit" value="Submit">
+              </textarea><br>
+              <input type="submit" style="font-size:140%;" value="Submit">
             </form>
 
             <br />
@@ -509,9 +509,10 @@ else {
     console.log("undefined")
 }
 
-        </textarea>
-        <input type="submit" value="Submit">
+        </textarea><br>
+        <input type="submit" style="font-size:140%;" value="Submit">
       </form>
 
   </body>
 </html>
+
