--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@ timer_start = timeit.default_timer()
 
 (n,k) = (50,40)  
 # Please input (n,k) for the ps(n,k) function above here.
-# Note that when k=n, then ps(n,k) = P(n), 
+# Note that when k>=n, then ps(n,k) = P(n), 
 # where P(n) is the partition function.
 
 
