--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ except:
 let N = 150  // Please input a natural number "N" for P(N) at here.
 
 
-let startTime = performance.now()
+let startTime = performance.now();
 
 if (N >= 0 && N - parseInt(N) == 0) {
 
@@ -506,7 +506,7 @@ if (N >= 0 && N - parseInt(N) == 0) {
 }
 
 else {
-    console.log("undefined")
+    console.log("undefined");
 }
 
         </textarea><br>
@@ -519,7 +519,7 @@ else {
 
 <h2> Partition by Size Function</h2>
 <p>We coded also ps(n,k) function for those who might need it. <br> 
-   The code is written in Python.
+   The codes are written in Python and JavaScript (Node.js).
 </p>
 
 <form action="https://www.jdoodle.com/api/redirect-to-post/python3-programming-online" method="post">
@@ -600,7 +600,115 @@ else:
 </textarea><br>
 <input type="submit" style="font-size:140%;" value="Submit">
 </form>
+  
 
+<br>
+<br>
+<br>
+
+<form action="https://www.jdoodle.com/api/redirect-to-post/execute-nodejs-online" method="post">
+    <textarea name="initScript"  rows="16" cols="160">
+
+
+
+let [n, k] = [100, 50];
+/* 
+Please input [n,k] for the ps(n,k) function above here.
+Note that when k>=n, then ps(n,k) = P(n), 
+where P(n) is the partition function. 
+*/
+
+
+let startTime = performance.now();
+
+
+if (n - parseInt(n) == 0 && k - parseInt(k) == 0 && n >= 0 && k >= 0) {
+
+    function partition_by_size(n, k) {
+        let m = n;
+        let lowerlimit = n - k;
+        let result = 0;
+        if (n >= k && k > 0) {
+            for (n -= 1; n >= lowerlimit; n -= 1) {
+                k = m - n;
+                result += A(n, k);
+            }
+            return result;
+        }
+        else if (k > n && n != 0 && k > 0) {
+            k = n, lowerlimit = n - k;
+            for (n -= 1; n >= lowerlimit; n -= 1) {
+                k = m - n;
+                result += A(n, k);
+            }
+            return result;
+        }
+        else {
+            return 1;
+        }
+    }
+
+    function A(n, k) {
+        if (n >= k && k == 1) {
+            return 1;
+        }
+        else if (n >= k && k >= 3) {
+            return C(n) + A(n - k, k) + B(n, k);
+        }
+        else if (n >= 3 && n < k) {
+            k = n;
+            return C(n) + A(n - k, k) + B(n, k);
+        }
+        else {
+            return C(n);
+        }
+    }
+
+    function B(n, k) {
+        let send_back = 0;
+        while (k > 3) {
+            k--;
+            send_back += A(n - k, k);
+        }
+        return send_back;
+    }
+
+    function C(n) {
+        let c_result = 0;
+        c_result += D(n);
+        return c_result;
+    }
+
+    function D(n) {
+        let result = 0;
+
+        if (n % 2 == 1) {
+            result += (n + 1) / 2;
+        } else {
+            result += (n / 2) + 1;
+        }
+        return result;
+    }
+
+    let ps_function = partition_by_size(n, k);
+    console.log(ps_function);
+
+    let endTime = performance.now();
+    let duration = ((endTime - startTime) / 1000).toFixed(6);
+    console.log(`running time: ${duration} seconds`);
+}
+
+else {
+    console.log("undefined");
+}
+        
+</textarea><br>
+<input type="submit" style="font-size:140%;" value="Submit">
+</form>
+
+<br>
+<br>
+<br>
 
   </body>
 </html>
