--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@ timer_start = timeit.default_timer()
 
 (n,k) = (50,40)  
 # Please input (n,k) for the ps(n,k) function above here.
-# Note that when k=n, then ps(n,k) = P(n), 
+# Note that when k=n, then ps(n,k) = P(n) holds, 
 # where P(n) is the partition function.
 
 
@@ -1141,7 +1141,7 @@ public class partition_by_size {
 let [n, k] = [100, 50];
 /* 
 Please input [n,k] for the ps(n,k) function above here.
-Note that when k>=n, then ps(n,k) = P(n), 
+Note that when k>=n, then ps(n,k) = P(n) holds, 
 where P(n) is the partition function. 
 */
 
