--- a/index.html
+++ b/index.html
@@ -1954,8 +1954,8 @@ if (n - parseInt(n) == 0 && k - parseInt(k) == 0 && n >= 0 && k >= 0) {
         if (n >= k && k > 0) {
             for (n -= 1; n >= lowerlimit; n -= 1) {
                 k = m - n;
-                if (n >= k && k == 1) {result += 1;}
-                else if (n >= k && k == 2) {
+                if (k == 1) {result += 1;}
+                else if (k == 2) {
                     if (n % 2 == 1) {
                         result += (n + 1) / 2;
                     } else {
@@ -1970,8 +1970,8 @@ if (n - parseInt(n) == 0 && k - parseInt(k) == 0 && n >= 0 && k >= 0) {
             k = n, lowerlimit = n - k;
             for (n -= 1; n >= lowerlimit; n -= 1) {
                 k = m - n;
-                if (n >= k && k == 1) {result += 1;}
-                else if (n >= k && k == 2) {
+                if (k == 1) {result += 1;}
+                else if (k == 2) {
                     if (n % 2 == 1) {
                         result += (n + 1) / 2;
                     } else {
